# policy-router-rs

./: AGENTS.md  Cargo.toml  README.MD  bundle.cmd
.cargo/: config.toml
config/: config.example.toml
docs/adr/: 0001-rule-priority-order.md
src/: lib.rs  main.rs
src/ipc/: mod.rs
src/platform/: mod.rs  stub.rs  windows.rs
src/policy/: config.rs  engine.rs
tests/: config_parse.rs  config_validate.rs  ipc_roundtrip.rs  policy_engine.rs  windows_process_lookup.rs
