[package]
name = "policy-router-rs"
version = "0.1.0"
edition = "2024"

description = "Windows split tunneling policy router (apps + domains) for VPN core and DPI-bypass proxy"
license = "MIT"
repository = "https://github.com/qqrm/policy-router-rs"
homepage = "https://github.com/qqrm/policy-router-rs"
readme = "README.md"
keywords = ["windows", "split-tunnel", "proxy", "vpn", "routing"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
arc-swap = "1.7.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ipnet = "2.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ctrlc = "3.5"
strum = "0.27"
strum_macros = "0.27"

interprocess = "2.2"
serde_json = "1.0"
notify = "7.0.0"

[features]
default = []
windows = ["dep:windows"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
], optional = true }
netstat2 = "0.11.2"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

multiple_crate_versions = "allow"

[profile.dev]
debug = 1

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[[bin]]
name = "policy-routerd"
path = "src/bin/policy-routerd.rs"

[[bin]]
name = "policy-routerctl"
path = "src/bin/policy-routerctl.rs"
